--- a/modal.html
+++ b/modal.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class = "screenSize">
-		
+			<!-- Button trigger modal -->
 			<button type="button" class="btnArea">
 				Launch demo modal
 			</button>
@@ -17,15 +17,14 @@
 				go back
 			</a>
 			
+			<!-- Modal -->
+			<div id="overlay">
+				hello
+			</div>
+			
 		</div>
-		
-		
+				
 		<script type="text/javascript" src = "jQuery-min-v3.3.1.js"></script>
 		<script type="text/javascript" src = "modal.js"></script>
-		<script type="text/javascript">
-			$(document).ready(() => {
-				alert("hello World");
-			});
-		</script>
 	</body>
 </html>
