--- a/modal.html
+++ b/modal.html
@@ -17,12 +17,35 @@
 				go back
 			</a>
 			
-			<!-- Modal -->
-			<div id="overlay">
-				hello
-			</div>
+			
 			
 		</div>
+		<!-- Modal -->
+		<div class = "overlay">
+			<!-- Modal Heading-->
+			<div class = "modalHeading">
+				<div class = "heading">
+					<p>Modal Title</p>
+					<button type = "button" class = "close">X</button>
+				</div>
+			</div>
+			<!-- Modal Content-->
+			<div class = "modalContent">
+				<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap modal without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
+			</div>
+			<!-- Modal Footer-->
+			<div class = "modalFooter">
+				<div class = "footerContainer">
+					<div class = "footer">
+						<button type = "button" class = "close">Close</button>
+						<button type = "button" class = "saveChange">Save Change</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 				
 		<script type="text/javascript" src = "jQuery-min-v3.3.1.js"></script>
 		<script type="text/javascript" src = "modal.js"></script>
