--- a/navBar.html
+++ b/navBar.html
@@ -10,19 +10,27 @@
 		<div class = "screenSize">
 		
 			<div class = "navContainer">
-				<div class="pageTitle">
-					Ranvijay
-					<img src = "menu.png" class = "menu"></img>
+				<div class = "section1">
+					<div class="pageTitle" href="">
+						Ranvijay
+						<img src = "menu.png" class = "menu"></img>
+					</div>
+					<a class="home" href="index.html">Home</a>
+					<a class="home" href="">Feature</a>
+					<a class="home" href="">Help</a>
+					<a class="home" href="">About</a>
 				</div>
-				<div class="home">Home</div>
-				<div class="home">Feature</div>
-				<div class="home">Help</div>
-				<div class="home">About</div>
+				<div class = "section2">
+					<input type="search" class="inputSearch" value = "Search">
+					<input type="submit" class="search" value="Search">
+				</div>
 			</div>
 		
-			<button type="button" class="btnArea">
-				back
-			</button>
+			<div class = "location">
+				<a type="button" href = "index.html" class="btnArea">
+					back
+				</a>
+			</div>
 		</div>
 		
 		
