--- a/collapse.html
+++ b/collapse.html
@@ -8,49 +8,53 @@
 	</head>
 	<body>
 		<div class = "screenSize">
-			<div class = "collGroupContainer1">
-				<div class = "collGroup">
-					<div class = "group1">Collapse group Item # 1</div>
+			<div class = "collapseContainer">
+				<div class = "collGroupContainer1">
+					<div class = "collGroup">
+						<div class = "group1">Collapse group Item # 1</div>
+					</div>
+					<div class = "collSubGroup1">
+						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
+						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
+						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+					</div>
 				</div>
-				<div class = "collSubGroup1">
-					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-					3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-					Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-					Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-					Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-					raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+				<div class = "collGroupContainer2">
+					<div class = "collGroup">
+						<div class = "group2">Collapse group Item # 2</div>
+					</div>
+					<div class = "collSubGroup2">
+						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
+						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
+						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+					</div>
+				</div>
+				<div class = "collGroupContainer3">
+					<div class = "collGroup">
+						<div class = "group3">Collapse group Item # 3</div>
+					</div>
+					<div class = "collSubGroup3">
+						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
+						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
+						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+					</div>
 				</div>
 			</div>
-			<div class = "collGroupContainer2">
-				<div class = "collGroup">
-					<div class = "group2">Collapse group Item # 2</div>
-				</div>
-				<div class = "collSubGroup2">
-					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-					3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-					Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-					Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-					Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-					raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
-				</div>
-			</div>
-			<div class = "collGroupContainer3">
-				<div class = "collGroup">
-					<div class = "group3">Collapse group Item # 3</div>
-				</div>
-				<div class = "collSubGroup3">
-					Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-					3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-					Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-					Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-					Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-					raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
-				</div>
+			<div class = "location">
+				<a type="button" href = "index.html" class="btnArea">
+					back
+				</a>
 			</div>
 			
-			<button type="button" class="btnArea">
-				back
-			</button>
 		</div>
 		
 		
