--- a/modal.html
+++ b/modal.html
@@ -32,7 +32,7 @@
 			<!-- Modal Content-->
 			<div class = "modalContent">
 				<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap modal without using bootstrap and without
+					to perform the operation of Bootstrap mod without using bootstrap and without
 					help of HTML5, CSS and jQuery.</p>
 			</div>
 			<!-- Modal Footer-->
