--- a/collapse.html
+++ b/collapse.html
@@ -10,7 +10,7 @@
 		<div class = "screenSize">
 			<div class = "collapseContainer">
 				<div class = "collGroupContainer1">
-					<div class = "collGroup">
+					<div class = "collGroup1">
 						<div class = "group1">Collapse group Item # 1</div>
 					</div>
 					<div class = "collSubGroup1">
@@ -23,7 +23,7 @@
 					</div>
 				</div>
 				<div class = "collGroupContainer2">
-					<div class = "collGroup">
+					<div class = "collGroup2">
 						<div class = "group2">Collapse group Item # 2</div>
 					</div>
 					<div class = "collSubGroup2">
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				<div class = "collGroupContainer3">
-					<div class = "collGroup">
+					<div class = "collGroup3">
 						<div class = "group3">Collapse group Item # 3</div>
 					</div>
 					<div class = "collSubGroup3">
