--- a/modal.html
+++ b/modal.html
@@ -34,6 +34,21 @@
 				<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
 					to perform the operation of Bootstrap mod without using bootstrap and without
 					help of HTML5, CSS and jQuery.</p>
+					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap mod without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
+					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap mod without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
+					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap mod without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
+					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap mod without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
+					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
+					to perform the operation of Bootstrap mod without using bootstrap and without
+					help of HTML5, CSS and jQuery.</p>
 			</div>
 			<!-- Modal Footer-->
 			<div class = "modalFooter">
