Updated the text on each components

--- a/collapse.html
+++ b/collapse.html
@@ -11,41 +11,39 @@
 			<div class = "collapseContainer">
 				<div class = "collGroupContainer1">
 					<div class = "collGroup1">
-						<div class = "group1">Collapse group Item # 1</div>
+						<div class = "group1">Early Life</div>
 					</div>
 					<div class = "collSubGroup1">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+						<p>Born on Dec 20, 1992 in the village of Bishunpur Arara, district Vaishali, Bihar.<br>
+						   I have started my early education in Saraswati Vidya Mandir, later went to Shanti Niketan Aawashiye Bal Vidyalaya,
+						   Muzaffarpur. Than I finished my High School from "Prestine Children High School" and Sr. High school from "St.Paul Sec. School".
+						   I have graduated in <span class = "fontSize">Computer Science and Engineering </span> from <span class = "fontSize">National Institute Of Technology,
+						   Durgapur, West-Bengal</span>
+						</p>
 					</div>
 				</div>
 				<div class = "collGroupContainer2">
 					<div class = "collGroup2">
-						<div class = "group2">Collapse group Item # 2</div>
+						<div class = "group2">Professional Experience</div>
 					</div>
 					<div class = "collSubGroup2">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+						<p>I have started my Professional carrier with Infosys Ltd on 8th Dec 2014. I have worked in Banking Domain with our
+						   client "Royal Bank of Scottland" in their migration project "Rainbow" for a year.<br>
+						   Later I have started working in Insurance Domain with client "Northwest Mutual, USA" for their development and maintance project.<br>
+						   
+						   Through my professional journey I have acquired the skillset of <span class = "fontSize">Mean Stack Web Development, dot-net framework with C#.</span>
+						</p>
 					</div>
 				</div>
 				<div class = "collGroupContainer3">
 					<div class = "collGroup3">
-						<div class = "group3">Collapse group Item # 3</div>
+						<div class = "group3">Hobbies</div>
 					</div>
 					<div class = "collSubGroup3">
-						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-						3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. 
-						Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-						Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-						Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, 
-						raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS
+						<p>In my personal life, I love to code using the language JAVA.<br>
+						   In my spare time, I like to go-out for swimming, playing Basket-ball, snooker.<br>
+						   I love to explore the world using different channels 'mainly movies', articles and social-network.
+						</p>
 					</div>
 				</div>
 			</div>
