--- a/modal.html
+++ b/modal.html
@@ -32,23 +32,17 @@
 			<!-- Modal Content-->
 			<div class = "modalContent">
 				<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
+					to perform the operation of Bootstrap mod without using bootstrap and with
 					help of HTML5, CSS and jQuery.</p>
-					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
-					help of HTML5, CSS and jQuery.</p>
-					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
-					help of HTML5, CSS and jQuery.</p>
-					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
-					help of HTML5, CSS and jQuery.</p>
-					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
-					help of HTML5, CSS and jQuery.</p>
-					<p>My name is Ranvijay Rana. I'm a Mean stack develoer. currently I'm trying 
-					to perform the operation of Bootstrap mod without using bootstrap and without
-					help of HTML5, CSS and jQuery.</p>
+				<p>Lets talk about my hobbies, solving Sudokoo, Snooker</p>
+				<p>Sudokoo<br>
+					Interesting Game, don't you agree. It like humour in Pain(when you put your brain at work, funny :))
+				</p>
+				<p>Snooker</p>
+				<p>3D version of the game which I like to play in my early-life, Carrom.
+				   Now transformed into fascinating Game with lots of color(red, yellow, green, brown, blue, pink, black and of-course the striker "white ball") on table,
+				   A Fascinating Game.
+				</p>
 			</div>
 			<!-- Modal Footer-->
 			<div class = "modalFooter">
