--- a/navBar.html
+++ b/navBar.html
@@ -16,9 +16,9 @@
 						<img src = "menu.png" class = "menu"></img>
 					</div>
 					<a class="home" href="index.html">Home</a>
-					<a class="home" href="">Feature</a>
-					<a class="home" href="">Help</a>
-					<a class="home" href="">About</a>
+					<a class="home" href="https://ranvijayrana.github.io/jQuery_basic/collapse.html">My Journey</a>
+					<a class="home" href="https://RanvijayRana.github.io/">About Me</a>
+					<a class="home" href="https://ranvijayrana.github.io/jQuery_basic/modal.html">Summary</a>
 				</div>
 				<div class = "section2">
 					<input type="search" class="inputSearch" value = "Search">
