--- a/modal.html
+++ b/modal.html
@@ -38,8 +38,8 @@
 				<p>Sudokoo<br>
 					Interesting Game, don't you agree. It like humour in Pain(when you put your brain at work, funny :))
 				</p>
-				<p>Snooker</p>
-				<p>3D version of the game which I like to play in my early-life, Carrom.
+				<p>Snooker<br>
+				   3D version of the game which I like to play in my early-life, Carrom.
 				   Now transformed into fascinating Game with lots of color(red, yellow, green, brown, blue, pink, black and of-course the striker "white ball") on table,
 				   A Fascinating Game.
 				</p>
